make compatibility with mac V2

--- a/api/examples/Makefile.am
+++ b/api/examples/Makefile.am
@@ -1,6 +1,8 @@
 # The bits needed for glfsxmp
 EXTRA_PROGRAMS = glfsxmp
 glfsxmp_SOURCES = glfsxmp.c
+GLFS_CFLAGS = -I/usr/local/include/glusterfs/
+GLFS_LIBS = -L/usr/local/lib/ -lgfapi
 glfsxmp_CFLAGS = $(GLFS_CFLAGS) -Wall
-glfsxmp_LDADD = $(GLFS_LIBS) -lrt
+glfsxmp_LDADD = $(GLFS_LIBS)
 
